edited link logo ConfirmEmail.html

--- a/mailTemplates/ConfirmEmail.html
+++ b/mailTemplates/ConfirmEmail.html
@@ -464,7 +464,7 @@
                                   >
                                     <a
                                       target="_blank"
-                                      href="https://viewstripo.email"
+                                      href="https://learn-english-words.vercel.app/"
                                       style="
                                         mso-line-height-rule: exactly;
                                         text-decoration: underline;
